prevent text overflow in posts

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -47,6 +47,9 @@ body {
     color: rgba(0, 0, 0, 0.7);
     line-height: 1.3em;
     height: 115px;
+    word-break: break-all;
+    overflow: hidden;
+    overflow-wrap: break-word;
 }
 
 .post .meta .author:before {
